viendo coordenadas en maps

--- a/src/main/webapp/WEB-INF/templates/plantilla.xhtml
+++ b/src/main/webapp/WEB-INF/templates/plantilla.xhtml
@@ -21,19 +21,12 @@
 <p:growl autoUpdate="true" showDetail="true"/>
 		<h:form id="frmMenu">
 			<p:menubar autoDisplay="false">
-			<p:menuitem icon="ui-icon-home" value="quimico"
-					action="quimico?faces-redirect=true"></p:menuitem>
-				<p:menuitem icon="ui-icon-home" value="bacterial"
-					action="bacterial?faces-redirect=true"></p:menuitem>
-				<p:menuitem icon="ui-icon-home" value="fisoquimico"
-					action="fisoquimico?faces-redirect=true"></p:menuitem>
-				<p:menuitem icon="ui-icon-home" value="muestrabacterial"
-					action="muestrabacterial?faces-redirect=true"></p:menuitem>
-				<p:menuitem icon="ui-icon-home" value="muestrafisoquimico"
-					action="muestrafisoquimico?faces-redirect=true"></p:menuitem>
-				<p:menuitem icon="ui-icon-home" value="muestraquimico"
-					action="muestraquimico?faces-redirect=true"></p:menuitem>
-				
+				<p:menuitem icon="ui-icon-home" value="Familia"
+					action="familia?faces-redirect=true"></p:menuitem>
+				<p:menuitem icon="ui-icon-home" value="Especie"
+					action="Especie?faces-redirect=true"></p:menuitem>
+				<p:menuitem icon="ui-icon-home" value="MAPA UNIA"
+					action="mapunia?faces-redirect=true"></p:menuitem>
 				<f:facet name="options">
 					<h:panelGrid columns="2">
 						<p:clock pattern="h:mm:ss a dd/MM/yyyy" mode="server" />
