--- a/src/main/webapp/WEB-INF/templates/plantilla.xhtml
+++ b/src/main/webapp/WEB-INF/templates/plantilla.xhtml
@@ -18,21 +18,27 @@
 			closable="false" resizable="false" showHeader="false">
 			<p:graphicImage library="images" name="load.gif" />
 		</p:dialog>
-<p:growl autoUpdate="true" showDetail="true"/>
+		
+		<p:growl autoUpdate="true" showDetail="true" />
+		
 		<h:form id="frmMenu">
 			<p:menubar autoDisplay="false">
-				<p:menuitem icon="ui-icon-home" value="Familia"
-					action="familia?faces-redirect=true"></p:menuitem>
-				<p:menuitem icon="ui-icon-home" value="Especie"
-					action="Especie?faces-redirect=true"></p:menuitem>
+			
+				<p:menuitem icon="ui-icon-home" value="Individuos"
+					action="individuo?faces-redirect=true"></p:menuitem>
+
 				<p:menuitem icon="ui-icon-home" value="MAPA UNIA"
 					action="mapunia?faces-redirect=true"></p:menuitem>
+
+
+
 				<f:facet name="options">
 					<h:panelGrid columns="2">
 						<p:clock pattern="h:mm:ss a dd/MM/yyyy" mode="server" />
 						<p:commandButton icon="ui-icon-gear" />
 					</h:panelGrid>
 				</f:facet>
+				
 
 			</p:menubar>
 
